
2008-12-28	
Initial Project in ajcodekatas
Parser and tests
String, integer (no real yet)
Expression
Binary expression (only integers)
Compiler and tests

2009-01-01
Real number support (parse, compile, evaluate, without operators yet)
Boolean support (parse, compile, evaluate)
List (parse, compile, evaluate)
Dictionary (parse, compile, evaluate)
Power operator ** (only integer parameters)
Arithmetic operator precedence

2009-01-17
Quoted String as String
Command
Simple Assignment Command
CompileCommand in Compiler
Machine with Environment, Input and Output
Print Command

2009-12-25
Expression refactored to IExpression
Command refactored to ICommand
AjPython.Nodes refactored to AjPython.Expressions
Environment refactored to BindingEnvironment
TokenType.EndOfLine in Lexer, with tests
Parser.CompileSimpleCommand
Numbers and NumbersTests
Binary Operators on Numbers
AjPython.Console
SyntaxErrorException
IfCommand with tests
ImportCommand with tests
ImportFromCommand with tests
Predicates with tests
Examples in tests: setvar.py, setvars.py, import.py, importfrom.py
SimpleAssignmentCommand with tests
ModuleUtilities
import in Parser
from import in Parser
if in Parser
; in Parser
indent in Parser, WIP